# api-contracts/staff-service/types.ts
@@ -348,6 +348,178 @@ export interface paths {
         patch?: never;
         trace?: never;
     };
+    "/api/vi/staff-departments": {
+        parameters: {
+            query?: never;
+            header?: never;
+            path?: never;
+            cookie?: never;
+        };
+        /** Get All Staff Departments */
+        get: {
+            parameters: {
+                query?: never;
+                header?: never;
+                path?: never;
+                cookie?: never;
+            };
+            requestBody?: never;
+            responses: {
+                /** @description OK */
+                200: {
+                    headers: {
+                        [name: string]: unknown;
+                    };
+                    content: {
+                        "application/json": components["schemas"]["StaffDepartment"][];
+                    };
+                };
+            };
+        };
+        put?: never;
+        /** Add Department */
+        post: {
+            parameters: {
+                query?: never;
+                header?: never;
+                path?: never;
+                cookie?: never;
+            };
+            requestBody: {
+                content: {
+                    "application/json": components["schemas"]["StaffDepartmentBase"];
+                };
+            };
+            responses: {
+                /** @description Created */
+                201: {
+                    headers: {
+                        [name: string]: unknown;
+                    };
+                    content?: never;
+                };
+            };
+        };
+        delete?: never;
+        options?: never;
+        head?: never;
+        patch?: never;
+        trace?: never;
+    };
+    "/api/vi/staff-departments/identifiers": {
+        parameters: {
+            query?: never;
+            header?: never;
+            path?: never;
+            cookie?: never;
+        };
+        /** Get All Staff Department Identifiers */
+        get: {
+            parameters: {
+                query?: never;
+                header?: never;
+                path?: never;
+                cookie?: never;
+            };
+            requestBody?: never;
+            responses: {
+                /** @description OK */
+                200: {
+                    headers: {
+                        [name: string]: unknown;
+                    };
+                    content: {
+                        "application/json": components["schemas"]["StaffDepartmentIdentifierResponse"][];
+                    };
+                };
+            };
+        };
+        put?: never;
+        post?: never;
+        delete?: never;
+        options?: never;
+        head?: never;
+        patch?: never;
+        trace?: never;
+    };
+    "/api/vi/staff-departments/{staffDepartmentId}": {
+        parameters: {
+            query?: never;
+            header?: never;
+            path?: never;
+            cookie?: never;
+        };
+        get?: never;
+        /** Update Department */
+        put: {
+            parameters: {
+                query?: never;
+                header?: never;
+                path: {
+                    staffDepartmentId: components["schemas"]["UUID"];
+                };
+                cookie?: never;
+            };
+            requestBody: {
+                content: {
+                    "application/json": components["schemas"]["StaffDepartmentBase"];
+                };
+            };
+            responses: {
+                /** @description No Content */
+                204: {
+                    headers: {
+                        [name: string]: unknown;
+                    };
+                    content?: never;
+                };
+            };
+        };
+        post?: never;
+        delete?: never;
+        options?: never;
+        head?: never;
+        patch?: never;
+        trace?: never;
+    };
+    "/api/vi/staff-departments/{staffDepartmentId}/base": {
+        parameters: {
+            query?: never;
+            header?: never;
+            path?: never;
+            cookie?: never;
+        };
+        /** Get Staff Department Base By Id */
+        get: {
+            parameters: {
+                query?: never;
+                header?: never;
+                path: {
+                    staffDepartmentId: components["schemas"]["UUID"];
+                };
+                cookie?: never;
+            };
+            requestBody?: never;
+            responses: {
+                /** @description OK */
+                200: {
+                    headers: {
+                        [name: string]: unknown;
+                    };
+                    content: {
+                        "application/json": components["schemas"]["StaffDepartmentBase"];
+                    };
+                };
+            };
+        };
+        put?: never;
+        post?: never;
+        delete?: never;
+        options?: never;
+        head?: never;
+        patch?: never;
+        trace?: never;
+    };
 }
 export type webhooks = Record<string, never>;
 export interface components {
@@ -438,6 +610,45 @@ export interface components {
              * @description The date the staff member started working
              */
             startDate: string;
+        };
+        StaffDepartment: {
+            id?: components["schemas"]["UUID"];
+            department?: components["schemas"]["Department"];
+            staff?: components["schemas"]["Staff"];
+            role?: string;
+            createdAt?: components["schemas"]["Instant"];
+            updatedAt?: components["schemas"]["Instant"];
+        };
+        StaffDepartmentBase: {
+            /**
+             * Staff
+             * Format: selector
+             * @description Unique identifier of the staff member being assigned to the department
+             */
+            staffId: string;
+            /**
+             * Department
+             * Format: selector
+             * @description Unique identifier of the department staff members are being assigned to
+             */
+            departmentId: string;
+            /**
+             * Role
+             * @description Role of the staff member in the department
+             */
+            role: string;
+        };
+        StaffDepartmentIdentifierResponse: {
+            /**
+             * ID
+             * @description Unique identifier of the Staff Department combination
+             */
+            id: components["schemas"]["UUID"];
+            /**
+             * Label
+             * @description A human readable label identifiying the Staff Department combination
+             */
+            label: string;
         };
         StaffIdentifier: {
             /**
