# types/staff-service.ts
@@ -7,6 +7,9 @@ export type Instant = components["schemas"]["Instant"];
 export type LocalDate = components["schemas"]["LocalDate"];
 export type Staff = components["schemas"]["Staff"];
 export type StaffBase = components["schemas"]["StaffBase"];
+export type StaffDepartment = components["schemas"]["StaffDepartment"];
+export type StaffDepartmentBase = components["schemas"]["StaffDepartmentBase"];
+export type StaffDepartmentIdentifierResponse = components["schemas"]["StaffDepartmentIdentifierResponse"];
 export type StaffIdentifier = components["schemas"]["StaffIdentifier"];
 export type Title = components["schemas"]["Title"];
 export type UUID = components["schemas"]["UUID"];
